--- a/home/templates/content_FAQs.html
+++ b/home/templates/content_FAQs.html
@@ -4,7 +4,7 @@
 
  <p class="custom-font mb-1">What does OnlyWorlds do?</p>
            <ul class="custom-font accordion-content accordion-list-item">
-            <li>Offer world building tools, a data structure to build into, and ways to ship worlds around</li>
+            <li>Offer world building tools, a data structure to build applications and worlds on top of, and ways to ship worlds around</li>
         </ul>
 
     <br>
@@ -12,7 +12,11 @@
             <ul class="custom-font accordion-content accordion-list-item">
             <li>Download the mobile app, create some things, give some feedback, export to website, import to Unity mapper, help develop</li>
         </ul>
-
+  <br>
+     <p class="custom-font mb-1">Where's my desktop/web interface?</p>
+            <ul class="custom-font accordion-content accordion-list-item">
+            <li>High on the priority list, as a mobile app is not ideal for importing / organizing existing data</li>
+        </ul>
         <br>
      <p class="custom-font mb-1">Are my worlds future-proof?</p>
             <ul class="custom-font accordion-content accordion-list-item">
@@ -23,8 +27,8 @@
             <br>
      <p class="custom-font mb-1">What's with all the categories and fields and types and subtypes that I totally don't agree with? </p>
             <ul class="custom-font accordion-content accordion-list-item">
-            <li>These are all a rough sketch that provide some baseline simulation and game integration potential </li>
-            <li>Most categories, fields and types are recognized by the author as useful, but all parts of it are open to feedback</li>
+            <li>These are all a rough sketch that provide a workable foundation for simulation and game integration </li>
+            <li>Many categories, fields and types are recognized by the author as useful, but all of it is open to feedback</li>
         </ul>
 
 </div>
