--- a/home/templates/content_profile.html
+++ b/home/templates/content_profile.html
@@ -2,6 +2,7 @@
 {% load widget_tweaks %}
 
 {% block content %}
+        <p class="custom-font mb-4">Profile management is under construction</p>
 <div class="py-8 px-6 max-w-2xl mx-auto bg-gray-900 rounded-lg shadow-md">
     <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
