--- a/home/templates/content_landing.html
+++ b/home/templates/content_landing.html
@@ -17,27 +17,27 @@
     </div>
     <br>
        <a href="https://testflight.apple.com/join/bXvUExCL" target="_blank" rel="noopener noreferrer">
-            <img src="{% static 'img/icon-apple.png' %}" alt="iOS Testflight" style="height: 32px; width: auto;" class="ml-2">
+            <img src="{% static 'img/icon-apple.png' %}" alt="iOS Testflight" style="height: 32px; width: auto;"">
         </a>
         <p class="mt-2">iOs version is staged in TestFlight. Follow steps to install TestFlight first, then open link again</p>
         <br>
 
       <a href="https://play.google.com/apps/internaltest/4700705784602434522" target="_blank"
            rel="noopener noreferrer">
-            <img src="{% static 'img/icon-google.png' %}" alt="Android APK" style="height: 48px; width: auto;" >
+            <img src="{% static 'img/icon-google.png' %}" alt="Android APK" style="height: 32px; width: auto;" >
         </a>
 
     <p class="mb-1">Android version is in closed testing. To access through this channel:
         Please send any google email, with 'android' as message, on the <a href="https://www.onlyworlds.com/about/"
                                                      class="inline-block text-m font-bold text-blue-500 hover:underline"
                                                      target="_blank" rel="noopener noreferrer">About page</a>. You will receive an access notification within 24 hours</p>
-        <p class="mb-8">Or directly download and manually install the APK file <a href="https://drive.google.com/file/d/1DQk8-wbfz74HXzW8S3gafP5PxlcF4iWd/view?usp=sharing"
+        <p class="mb-8">Or directly download the APK file <a href="https://drive.google.com/file/d/1DQk8-wbfz74HXzW8S3gafP5PxlcF4iWd/view?usp=sharing"
                                                      class="inline-block text-m font-bold text-blue-500 hover:underline"
-                                                     target="_blank" rel="noopener noreferrer">here</a></p>
+                                                     target="_blank" rel="noopener noreferrer">here</a>, transfer to your device, then open from file viewer </p>
 
 
          <a href="https://discord.gg/twCjqvVBwb" class="inline-block">
-            <img src="{% static 'img/discordlogo.png' %}" alt="Join the Discord" class="ml-2 w-8">
+            <img src="{% static 'img/discordlogo.png' %}" alt="Join the Discord" class="w-8">
         </a>
            <p class="mt-1">Join the Discord server to provide feedback and contribute to the project</p>
 {% comment %}    <div class="flex flex-row items-center gap-4 mt-4">
